# Synapse

./: .gitmodules  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml  static.yml
available/: index.html
cmake/: UpdateSubmodules.cmake
doc/: index.html  styles.css
docs/: available.md  docs.md  index.html  index.md
examples/: CMakeLists.txt  index.html
examples/creating-cnn/: CMakeLists.txt  creating-cnn.cpp
examples/parsing-data/: CMakeLists.txt  parsing-data.cpp
examples/trivial-usage/: CMakeLists.txt  trivial-usage.cpp
examples/trivial-workflow/: CMakeLists.txt  trivial-workflow.cpp
include/MLL/: Linear.h
include/MLL/AI/: Data.h  Model.h
include/MLL/AI/Layers/: Layer.h
include/MLL/Linear/: Tensor.h
include/Synapse/: AI.h  linear.h
include/Synapse/AI/: automated.h  data.h  dataset.h  functions.h  layers.h  maps.h  model.h  optimizers.h
include/Synapse/AI/automated/: RL.h  SL.h
include/Synapse/AI/automated/RL/: agent.h  entity.h  generation.h  population.h
include/Synapse/AI/automated/SL/: create.h  model_builder.h
include/Synapse/AI/functions/: activ_funcs.h  loss_funcs.h  other_funcs.h
include/Synapse/AI/interfaces/: clonable.h  layer.h  savable.h  tunable.h
include/Synapse/AI/layers/: activation.h  convolutional.h  dense.h  flatten.h  layer.h  pooling.h
include/Synapse/AI/maps/: activ_funcs_map.h  layers_map.h  loss_funcs_map.h
include/Synapse/AI/optimizers/: GD.h  SGD.h  optimizer.h
include/Synapse/linear/: matrix.h  tensor.h  tensor_funcs.h  vector.h
search/: search_index.json
src/: CMakeLists.txt
src/AI/: CMakeLists.txt  Data.cpp  Model.cpp  data.cpp  dataset.cpp  functions.cpp  layers.cpp  model.cpp  optimizers.cpp
src/AI/automated/RL/: agent.cpp  entity.cpp  generation.cpp
src/AI/automated/SL/: create.cpp  model_builder.cpp
src/AI/functions/: activ_funcs.cpp  loss_funcs.cpp  other_funcs.cpp
src/AI/layers/: activation.cpp  convolutional.cpp  dense.cpp  flatten.cpp  pooling.cpp
src/AI/maps/: activ_funcs_map.cpp  layers_map.cpp  loss_funcs_map.cpp
src/Linear/: CMakeLists.txt  Tensor.cpp  Vector.cpp  tensor_funcs.cpp
src/linear/: tensor.cpp  tensor_funcs.cpp
test/: CMakeLists.txt  my_test.cpp  test_main.cpp  test_program.cpp  tests.cpp
